# financial-agent-system

./: .env.sample  AGENTS.md  Makefile  README.md  docker-compose.yml  render.yaml
app/: Dockerfile  alembic.ini  crud.py  database.py  dependencies.py  logging_config.py  main.py  models.py  pyproject.toml  schemas.py  security.py
app/agents/: analysis_tools.py  config_loader.py  management_tools.py  market_data_agent.py  orchestrator_agent.py  portfolio_analyzer_agent.py  registration_tools.py  ticker_utils.py  tool_context.py  toolkit_common.py  tools.py
app/agents/configs/: analysis_agent.yaml  management_agent.yaml  registration_agent.yaml  router_agent.yaml
app/migrations/: env.py
app/migrations/versions/: 20260518_01_phase21_priority1_baseline.py  20260518_02_add_portfolio_scoping.py
app/repositories/: __init__.py  agent_action_repository.py  asset_repository.py  dividend_repository.py  transaction_repository.py  user_repository.py
app/routers/: agent.py  assets.py  auth.py  dividends.py  transactions.py  utils.py
app/scripts/: migrate.py  start-api.sh
app/services/: email_service.py  magic_link_service.py
app/templates/: magic_link_email.html
docs/: blueprint-phase-16-assets-list.md  blueprint-phase-18-llm-provider-refactor.md  blueprint-phase-19-asset-valuation-with-pl.md  blueprint-phase-20-dividend-registration-agent.md  blueprint-phase-21-priority1-security-isolation.md  checklist-phase-19-implementation.md  instruction.md  prd-core.md
tests/: conftest.py  test_agent_system.py  test_analysis_tools.py  test_asset_price_cache_crud.py  (+13 more)
(+37 files in other folders)
