[tool.poetry]
name = "financial-agent-system"
version = "0.1.0"
description = "A financial management system with AI agents"
authors = ["erisonsuzuki"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.121.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
sqlalchemy = "^2.0.29"
psycopg = {extras = ["binary"], version = "^3.1.18"}
yfinance = "^0.2.40"
langchain = "^1.0"
langchain-groq = "^1.1.2"
langchain-nvidia-ai-endpoints = "^1.1.0"
python-dotenv = "^1.0.1"
httpx = "^0.27.0"
pyyaml = "^6.0.1"
pandas = "^2.2.2"
argon2-cffi = "^23.1.0"
email-validator = "^2.1.1"
starlette = "0.49.1"
langchain-core = "^1.2.11"
langchain-text-splitters = "^1.0"
pyjwt = {version = "^2.10.1", extras = ["crypto"]}

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
respx = "^0.21.0"
pip-audit = "^2.7.3"
wheel = "^0.46.2"
